big changes: added x,y coordinate tracking before and after hiding. fixed ratio in css. stopped game when window too small.

--- a/app.css
+++ b/app.css
@@ -8,16 +8,26 @@ body{
 .gameViewBorder {
     border:2px solid rgb(85, 85, 85);
 }
-
+/* set variable for size multiplier applied to screen size */
+:root {
+    --sizeMultiplier:1.3;
+}
 #container{
-    display: block;
-    width: 75vw;
-    max-width: 177.78vh;
-    /* 16/9 = 1.778 */
-    height: 56.25vw;
-    /* height:width ratio = 9/16 = .5625  */
-    max-height: 100vh;
+    display: relative;
     margin:auto;
+    width: calc(1000px * var(--sizeMultiplier));
+    height:calc(661.77px * var(--sizeMultiplier));
+    /* ratio = 1.5111 ; so 1000/1.5111 = 661.77 */
+}
+#playArea{
+    position:  relative;
+   top: 0;
+   left: 0;
+   height:100%;
+   width:100%; 
+   text-align: center;
+   font-size: 20px;
+   color: white;
 }
 
 text {
@@ -79,4 +89,7 @@ button {
 }
 .textShadow {
     text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.479);
+}
+.boderCheck{
+    border:1px solid green;
 }
